--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,317 +1,365 @@
 body {
-    font-family: 'Acumin', sans-serif;
-    font-weight: 300;
-    font-size: 28px;
-    color: #fff;
+  font-family: 'Acumin', sans-serif;
+  font-weight: 300;
+  font-size: 28px;
+  color: #ffffff;
+}
+
+main {
+  width: 100%;
 }
 
 .App {
-    text-align: center;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    overflow-x: hidden;
-    background-image: url("../assets/bg-image.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  text-align: center;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow-x: hidden;
+  background-image: url("../assets/bg-image.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .container {
-    max-width: 952px;
-    width: 100%;
-    padding: 0 16px;
-    margin: 0 auto;
+  max-width: 952px;
+  width: 100%;
+  padding: 0 16px;
+  margin: 0 auto;
 }
 
 .content {
-    background-color: #000000;
-    padding: 12px 40px 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-color: #000000;
+  padding: 12px 40px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    >.logo {
-        display: block;
-        max-width: 184px;
-    }
+  > .logo {
+    display: block;
+    max-width: 184px;
+  }
 }
 
 
 .mint {
-    &-container {
-        width: 100%;
-        margin-top: 28px;
-    }
+  &-container {
+    width: 100%;
+    margin-top: 28px;
+  }
 
-    &-content {
-        width: 100%;
-        padding: 52px 64px;
-        background-color: #ffffff;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+  &-content {
+    width: 100%;
+    padding: 52px 64px;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-        >h2 {
-            font-size: 127px;
-            font-weight: 900;
-            font-family: 'Acumin', sans-serif;
-            text-transform: uppercase;
-        }
+    > h2 {
+      font-size: 127px;
+      font-weight: 900;
+      font-family: 'Acumin', sans-serif;
+      text-transform: uppercase;
     }
+  }
 }
 
 .mint-button {
-    &__container {
-        width: 100%;
+  &__container {
+    width: 100%;
+
+    h4 {
+      text-transform: uppercase;
+      font-weight: 300;
+      font-size: 29px;
+    }
+  }
+
+  &__connect-wallet {
+    > button {
+      margin-top: 74px;
+    }
+  }
+
+  &__mint {
+    &__wallet-address {
+      margin-top: 36px;
+
+      > h5 {
+        font-size: 28px;
+        font-weight: 900;
+        color: #e0691c;
+      }
     }
 
-    &__connect-wallet {
-        >h4 {
-            text-transform: uppercase;
-            font-weight: 300;
-            font-size: 29px;
-        }
-
-        >button {
-            margin-top: 74px;
-        }
+    &__btn {
+      margin-top: 20px;
     }
+  }
+}
+
+.countdown-text {
+  font-weight: bold;
+  font-family: 'Acumin', sans-serif;
 }
 
 .page-title {
-    font-weight: 900;
-    font-size: 48px;
-    letter-spacing: 0.08em;
-    font-style: italic;
-    text-transform: uppercase;
-    margin-bottom: 16px;
+  font-weight: 900;
+  font-size: 48px;
+  letter-spacing: 0.08em;
+  font-style: italic;
+  text-transform: uppercase;
+  margin-bottom: 16px;
 }
+
 .page-description {
-    margin-bottom: 16px;
-    font-size: 24px;
-    letter-spacing: 0.04em;
-    font-weight: 300;
+  margin-bottom: 16px;
+  font-size: 24px;
+  letter-spacing: 0.04em;
+  font-weight: 300;
 }
 
 .desc {
-    margin: 24px 0 48px;
+  margin: 24px 0 48px;
+  display: flex;
+
+
+  &-item {
     display: flex;
+    align-items: center;
+    text-align: left;
+    flex: 1;
+    margin-right: 24px;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 16px 24px;
+    border-radius: 10px;
 
-
-    &-item {
-        display: flex;
-        align-items: center;
-        text-align: left;
-        flex: 1;
-        margin-right: 24px;
-        background: rgba(255, 255, 255, 0.1);
-        padding: 16px 24px;
-        border-radius: 10px;
-
-        img {
-            margin-right: 16px;
-        }
-
+    img {
+      margin-right: 16px;
     }
-    &-text {
-        font-size: 14px;
-        margin-top: 4px;
-    }
+
+  }
+
+  &-text {
+    font-size: 14px;
+    margin-top: 4px;
+  }
 }
+
 .btn-wrapper {
-    position: relative;
-    text-align: center;
-    padding-bottom: 24px;
+  position: relative;
+  text-align: center;
+  padding-bottom: 24px;
 }
 
 .mint-content {
-    display: inline-flex;
-    align-items: center;
-    color: #000;
+  display: inline-flex;
+  align-items: center;
+  color: #000000;
 }
 
 .mint-input {
-    line-height: 44px;
-    //background-color: #fff;
-    color: #fff;
-    border: 1px solid #fff;
-    font-weight: 700;
-    width: 140px;
-    margin-right: 24px;
-    font-size: 16px;
-    display: flex;
-    justify-content: space-around;
+  width: 100%;
+  height: 112px;
+  padding: 12px 16px;
+  color: #000000;
+  transition: 0.3s;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border: 5px solid #000000;
+  background-color: #ffffff;
+  margin-bottom: 12px;
+  //row-gap: 24px;
+  > input {
+    width: 100%;
+    text-align: center;
+    background-color: transparent;
+    border: none;
+    font-size: 78px;
+    font-weight: 900;
+  }
 
-    button {
-        background: transparent;
-        border: none;
-        cursor: pointer;
+  .btn {
+    &-plus, &-minus {
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      height: auto;
+      font-size: 72px;
+      font-weight: 900;
 
-        &[disabled] {
-            pointer-events: none;
-            opacity: 0.4;
-        }
-
-        img {
-            display: block;
-        }
+      &[disabled] {
+        cursor: default;
+        opacity: 0.5;
+      }
     }
+
+    &-plus {
+      margin-right: 10%;
+    }
+
+    &-minus {
+      margin-left: 10%;
+    }
+  }
 }
 
 .btn {
-    cursor: pointer;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 78px;
-    transition: .3s;
-    background-color: #000000;
-    color: #ffffff;
-    font-size: 41px;
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: 0.06em;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 112px;
+  transition: .3s;
+  background-color: #000000;
+  color: #ffffff;
+  font-size: 41px;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.06em;
 
-    &[disabled] {
-        pointer-events: none;
-        opacity: 0.5;
-    }
+  &[disabled] {
+    pointer-events: none;
+    opacity: 0.5;
+  }
 
-    &:hover {
-       background-color: rgba(0, 0, 0, 0.85);
-    }
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.85);
+  }
 }
 
 .warn-text {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 4px 0;
-    font-size: 20px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 4px 0;
+  font-size: 20px;
 }
 
 .lds-ring {
-    display: inline-block;
-    position: relative;
-    width: 20px;
-    height: 20px;
-    margin-left: 24px;
+  display: inline-block;
+  position: relative;
+  width: 20px;
+  height: 20px;
+  margin-left: 24px;
 }
 
 .lds-ring div {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    border: 3px solid black;
-    border-radius: 50%;
-    animation: ldsRing 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: black transparent transparent transparent;
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border: 3px solid black;
+  border-radius: 50%;
+  animation: ldsRing 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: black transparent transparent transparent;
 }
 
 .lds-ring div:nth-child(1) {
-    animation-delay: -0.45s;
+  animation-delay: -0.45s;
 }
 
 .lds-ring div:nth-child(2) {
-    animation-delay: -0.3s;
+  animation-delay: -0.3s;
 }
 
 .lds-ring div:nth-child(3) {
-    animation-delay: -0.15s;
+  animation-delay: -0.15s;
 }
 
 @media (max-width: 991px) {
 
-    .page-title {
-        font-size: 32px;
-    }
-    .page-description {
-        font-size: 18px;
-        line-height: 26px;
+  .page-title {
+    font-size: 32px;
+  }
+  .page-description {
+    font-size: 18px;
+    line-height: 26px;
+  }
+
+  .mint-input {
+    margin-right: 16px;
+  }
+  .btn {
+    padding: 0 24px;
+  }
+  .desc {
+    flex-direction: column;
+    margin: 12px 0 32px;
+
+    &-item {
+      margin-right: 0;
+
+
+      &:not(:last-child) {
+        margin-bottom: 16px;
+      }
+
     }
 
-    .mint-input {
+    &-text {
+      font-size: 14px;
+      margin-top: 4px;
+    }
+  }
+
+  .gallery {
+    height: 272px;
+
+    &:after {
+      height: 80%;
+    }
+
+    &-row {
+
+      li {
         margin-right: 16px;
+        min-width: 188px;
+      }
+
+      &-1 {
+        margin-bottom: 16px;
+      }
     }
-    .btn {
-        padding: 0 24px;
-    }
-    .desc {
-        flex-direction: column;
-        margin: 12px 0 32px;
-
-        &-item {
-            margin-right: 0;
-
-
-            &:not(:last-child) {
-                margin-bottom: 16px;
-            }
-
-        }
-        &-text {
-            font-size: 14px;
-            margin-top: 4px;
-        }
-    }
-
-    .gallery {
-        height: 272px;
-
-        &:after {
-            height: 80%;
-        }
-
-        &-row {
-
-            li {
-                margin-right: 16px;
-                min-width: 188px;
-            }
-
-            &-1 {
-                margin-bottom: 16px;
-            }
-        }
-    }
+  }
 }
 
 
 @media (max-width: 575px) {
 
-    .gallery {
-        height: 217px;
+  .gallery {
+    height: 217px;
 
-        &:after {
-            height: 80%;
-        }
-
-        &-row {
-
-            li {
-                margin-right: 12px;
-                min-width: 147px;
-            }
-
-            &-1 {
-                margin-bottom: 12px;
-            }
-        }
+    &:after {
+      height: 80%;
     }
+
+    &-row {
+
+      li {
+        margin-right: 12px;
+        min-width: 147px;
+      }
+
+      &-1 {
+        margin-bottom: 12px;
+      }
+    }
+  }
 
 }
 
 @keyframes ldsRing {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
