--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,8 +1,12 @@
 body {
-  font-family: 'Acumin', sans-serif;
-  font-weight: 300;
+  font-family: 'AcuminProWide', sans-serif;
+  font-weight: normal;
   font-size: 28px;
   color: #ffffff;
+
+  @media (max-width: 768px) {
+    font-size: 3.2vw;
+  }
 }
 
 main {
@@ -24,10 +28,14 @@ main {
 }
 
 .container {
-  max-width: 952px;
+  max-width: 872px;
   width: 100%;
   padding: 0 16px;
   margin: 0 auto;
+
+  @media (max-width: 872px) {
+    padding: 0 1.8vw;
+  }
 }
 
 .content {
@@ -37,9 +45,17 @@ main {
   flex-direction: column;
   align-items: center;
 
+  @media (max-width: 872px) {
+    padding: 1.8vw 4.58vw 4.58vw;
+  }
+
   > .logo {
     display: block;
     max-width: 184px;
+
+    @media (max-width: 872px) {
+      max-width: 21vw;
+    }
   }
 }
 
@@ -48,6 +64,10 @@ main {
   &-container {
     width: 100%;
     margin-top: 28px;
+
+    @media (max-width: 872px) {
+      margin-top: 3.2vw;
+    }
   }
 
   &-content {
@@ -58,11 +78,18 @@ main {
     flex-direction: column;
     align-items: center;
 
+    @media (max-width: 872px) {
+      padding: 6vw 7.3vw;
+    }
+
     > h2 {
-      font-size: 127px;
-      font-weight: 900;
-      font-family: 'Acumin', sans-serif;
+      font-size: 104px;
+      font-weight: bold;
       text-transform: uppercase;
+
+      @media (max-width: 872px) {
+        font-size: 12vw;
+      }
     }
   }
 }
@@ -73,14 +100,22 @@ main {
 
     h4 {
       text-transform: uppercase;
-      font-weight: 300;
-      font-size: 29px;
+      font-weight: normal;
+      font-size: 28px;
+
+      @media (max-width: 872px) {
+        font-size: 3.2vw;
+      }
     }
   }
 
   &__connect-wallet {
     > button {
       margin-top: 74px;
+
+      @media (max-width: 872px) {
+        margin-top: 8.48vw;
+      }
     }
   }
 
@@ -88,71 +123,32 @@ main {
     &__wallet-address {
       margin-top: 36px;
 
+      @media (max-width: 872px) {
+        margin-top: 4.12vw;
+      }
+
       > h5 {
         font-size: 28px;
-        font-weight: 900;
         color: #e0691c;
+
+        @media (max-width: 872px) {
+          font-size: 3.2vw;
+        }
       }
     }
 
     &__btn {
-      margin-top: 20px;
+      margin-top: 12px;
+
+      @media (max-width: 872px) {
+        margin-top: 1.38vw;
+      }
     }
   }
 }
 
 .countdown-text {
   font-weight: bold;
-  font-family: 'Acumin', sans-serif;
-}
-
-.page-title {
-  font-weight: 900;
-  font-size: 48px;
-  letter-spacing: 0.08em;
-  font-style: italic;
-  text-transform: uppercase;
-  margin-bottom: 16px;
-}
-
-.page-description {
-  margin-bottom: 16px;
-  font-size: 24px;
-  letter-spacing: 0.04em;
-  font-weight: 300;
-}
-
-.desc {
-  margin: 24px 0 48px;
-  display: flex;
-
-
-  &-item {
-    display: flex;
-    align-items: center;
-    text-align: left;
-    flex: 1;
-    margin-right: 24px;
-    background: rgba(255, 255, 255, 0.1);
-    padding: 16px 24px;
-    border-radius: 10px;
-
-    img {
-      margin-right: 16px;
-    }
-
-  }
-
-  &-text {
-    font-size: 14px;
-    margin-top: 4px;
-  }
-}
-
-.btn-wrapper {
-  position: relative;
-  text-align: center;
-  padding-bottom: 24px;
 }
 
 .mint-content {
@@ -166,21 +162,34 @@ main {
   height: 112px;
   padding: 12px 16px;
   color: #000000;
-  transition: 0.3s;
+  //transition: 0.3s;
   cursor: pointer;
   display: flex;
   align-items: center;
   border: 5px solid #000000;
   background-color: #ffffff;
   margin-bottom: 12px;
-  //row-gap: 24px;
-  > input {
+
+  @media (max-width: 872px) {
+    height: 12.8vw;
+    padding: 1.38vw 1.83vw;
+    border: 0.58vw solid #000000;
+    margin-bottom: 1.38vw;
+  }
+
+  &__count {
     width: 100%;
     text-align: center;
     background-color: transparent;
     border: none;
-    font-size: 78px;
-    font-weight: 900;
+    font-size: 72px;
+    font-weight: bold;
+    height: 72px;
+
+    @media (max-width: 872px) {
+      font-size: 8.25vw;
+      height: 8.25vw;
+    }
   }
 
   .btn {
@@ -188,9 +197,14 @@ main {
       background: transparent;
       border: none;
       cursor: pointer;
-      height: auto;
       font-size: 72px;
-      font-weight: 900;
+      height: 72px;
+      font-weight: bold;
+
+      @media (max-width: 872px) {
+        font-size: 8.25vw;
+        height: 8.25vw;
+      }
 
       &[disabled] {
         cursor: default;
@@ -215,13 +229,26 @@ main {
   justify-content: center;
   width: 100%;
   height: 112px;
-  transition: .3s;
+  //transition: .3s;
   background-color: #000000;
   color: #ffffff;
   font-size: 41px;
-  font-weight: 900;
+  font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 0.06em;
+
+  @media (max-width: 872px) {
+    height: 12.8vw;
+    font-size: 4.7vw;
+  }
+
+  > span {
+    height: 41px;
+
+    @media (max-width: 872px) {
+      height: 4.7vw;
+    }
+  }
 
   &[disabled] {
     pointer-events: none;
@@ -239,6 +266,10 @@ main {
   transform: translateX(-50%);
   padding: 4px 0;
   font-size: 20px;
+
+  @media (max-width: 872px) {
+    font-size: 2.3vw;
+  }
 }
 
 .lds-ring {
@@ -273,87 +304,6 @@ main {
   animation-delay: -0.15s;
 }
 
-@media (max-width: 991px) {
-
-  .page-title {
-    font-size: 32px;
-  }
-  .page-description {
-    font-size: 18px;
-    line-height: 26px;
-  }
-
-  .mint-input {
-    margin-right: 16px;
-  }
-  .btn {
-    padding: 0 24px;
-  }
-  .desc {
-    flex-direction: column;
-    margin: 12px 0 32px;
-
-    &-item {
-      margin-right: 0;
-
-
-      &:not(:last-child) {
-        margin-bottom: 16px;
-      }
-
-    }
-
-    &-text {
-      font-size: 14px;
-      margin-top: 4px;
-    }
-  }
-
-  .gallery {
-    height: 272px;
-
-    &:after {
-      height: 80%;
-    }
-
-    &-row {
-
-      li {
-        margin-right: 16px;
-        min-width: 188px;
-      }
-
-      &-1 {
-        margin-bottom: 16px;
-      }
-    }
-  }
-}
-
-
-@media (max-width: 575px) {
-
-  .gallery {
-    height: 217px;
-
-    &:after {
-      height: 80%;
-    }
-
-    &-row {
-
-      li {
-        margin-right: 12px;
-        min-width: 147px;
-      }
-
-      &-1 {
-        margin-bottom: 12px;
-      }
-    }
-  }
-
-}
 
 @keyframes ldsRing {
   0% {
