--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,10 +1,10 @@
 body {
   font-family: 'AcuminProWide', sans-serif;
   font-weight: normal;
-  font-size: 28px;
+  font-size: 18px;
   color: #ffffff;
 
-  @media (max-width: 768px) {
+  @media (max-width: 592px) {
     font-size: 3.2vw;
   }
 }
@@ -28,32 +28,32 @@ main {
 }
 
 .container {
-  max-width: 872px;
+  max-width: 592px;
   width: 100%;
   padding: 0 16px;
   margin: 0 auto;
 
-  @media (max-width: 872px) {
+  @media (max-width: 592px) {
     padding: 0 1.8vw;
   }
 }
 
 .content {
   background-color: #000000;
-  padding: 12px 40px 40px;
+  padding: 12px 26px 26px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  @media (max-width: 872px) {
+  @media (max-width: 592px) {
     padding: 1.8vw 4.58vw 4.58vw;
   }
 
   > .logo {
     display: block;
-    max-width: 184px;
+    max-width: 122px;
 
-    @media (max-width: 872px) {
+    @media (max-width: 592px) {
       max-width: 21vw;
     }
   }
@@ -63,31 +63,31 @@ main {
 .mint {
   &-container {
     width: 100%;
-    margin-top: 28px;
+    margin-top: 18px;
 
-    @media (max-width: 872px) {
+    @media (max-width: 592px) {
       margin-top: 3.2vw;
     }
   }
 
   &-content {
     width: 100%;
-    padding: 52px 64px;
+    padding: 34px 42px;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    @media (max-width: 872px) {
+    @media (max-width: 592px) {
       padding: 6vw 7.3vw;
     }
 
     > h2 {
-      font-size: 104px;
+      font-size: 69px;
       font-weight: bold;
       text-transform: uppercase;
 
-      @media (max-width: 872px) {
+      @media (max-width: 592px) {
         font-size: 12vw;
       }
     }
@@ -101,9 +101,9 @@ main {
     h4 {
       text-transform: uppercase;
       font-weight: normal;
-      font-size: 28px;
+      font-size: 18px;
 
-      @media (max-width: 872px) {
+      @media (max-width: 592px) {
         font-size: 3.2vw;
       }
     }
@@ -111,9 +111,9 @@ main {
 
   &__connect-wallet {
     > button {
-      margin-top: 74px;
+      margin-top: 48px;
 
-      @media (max-width: 872px) {
+      @media (max-width: 592px) {
         margin-top: 8.48vw;
       }
     }
@@ -121,17 +121,17 @@ main {
 
   &__mint {
     &__wallet-address {
-      margin-top: 36px;
+      margin-top: 24px;
 
-      @media (max-width: 872px) {
+      @media (max-width: 592px) {
         margin-top: 4.12vw;
       }
 
       > h5 {
-        font-size: 28px;
+        font-size: 18px;
         color: #e0691c;
 
-        @media (max-width: 872px) {
+        @media (max-width: 592px) {
           font-size: 3.2vw;
         }
       }
@@ -140,7 +140,7 @@ main {
     &__btn {
       margin-top: 12px;
 
-      @media (max-width: 872px) {
+      @media (max-width: 592px) {
         margin-top: 1.38vw;
       }
     }
@@ -148,7 +148,13 @@ main {
 }
 
 .countdown-text {
+  display: inline-block;
   font-weight: bold;
+  width: 80px;
+
+  @media (max-width: 592px) {
+    width: 14vw;
+  }
 }
 
 .mint-content {
@@ -159,7 +165,7 @@ main {
 
 .mint-input {
   width: 100%;
-  height: 112px;
+  height: 74px;
   padding: 12px 16px;
   color: #000000;
   //transition: 0.3s;
@@ -170,7 +176,7 @@ main {
   background-color: #ffffff;
   margin-bottom: 12px;
 
-  @media (max-width: 872px) {
+  @media (max-width: 592px) {
     height: 12.8vw;
     padding: 1.38vw 1.83vw;
     border: 0.58vw solid #000000;
@@ -182,11 +188,11 @@ main {
     text-align: center;
     background-color: transparent;
     border: none;
-    font-size: 72px;
+    font-size: 48px;
     font-weight: bold;
-    height: 72px;
+    height: 48px;
 
-    @media (max-width: 872px) {
+    @media (max-width: 592px) {
       font-size: 8.25vw;
       height: 8.25vw;
     }
@@ -197,11 +203,11 @@ main {
       background: transparent;
       border: none;
       cursor: pointer;
-      font-size: 72px;
-      height: 72px;
+      font-size: 48px;
+      height: 48px;
       font-weight: bold;
 
-      @media (max-width: 872px) {
+      @media (max-width: 592px) {
         font-size: 8.25vw;
         height: 8.25vw;
       }
@@ -228,24 +234,24 @@ main {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 112px;
+  height: 74px;
   //transition: .3s;
   background-color: #000000;
   color: #ffffff;
-  font-size: 41px;
+  font-size: 27px;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 0.06em;
 
-  @media (max-width: 872px) {
+  @media (max-width: 592px) {
     height: 12.8vw;
     font-size: 4.7vw;
   }
 
   > span {
-    height: 41px;
+    height: 27px;
 
-    @media (max-width: 872px) {
+    @media (max-width: 592px) {
       height: 4.7vw;
     }
   }
@@ -265,9 +271,9 @@ main {
   left: 50%;
   transform: translateX(-50%);
   padding: 4px 0;
-  font-size: 20px;
+  font-size: 13px;
 
-  @media (max-width: 872px) {
+  @media (max-width: 592px) {
     font-size: 2.3vw;
   }
 }
